--- a/02-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/02-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -11,9 +11,13 @@
 
   <div class="col-12 col-sm-6">
     <h3>listado</h3>
-    <ol>
-      <li>goku</li>
-      <li>Vegeta</li>
-    </ol>
+    <ul>
+      @for (character of characters(); track character.id; let idx=$index) {
+        <li>
+          <span>{{idx+1}} - {{character.name}}</span>
+          <strong class="text-danger"> ({{character.power}})</strong>
+        </li>
+      }
+    </ul>
   </div>
 </section>
