--- a/02-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/02-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -15,7 +15,9 @@
       @for (character of characters(); track character.id; let idx=$index) {
         <li>
           <span>{{idx+1}} - {{character.name}}</span>
-          <strong class="text-danger"> ({{character.power}})</strong>
+          <strong [class.text-danger]="character.power> 9000"
+            [class.text-primary]="character.power < 9000"> ({{character.power}})</strong>
+          <!--<strong [ngClass]="powerClasses()"> ({{character.power}})</strong>-->
         </li>
       }
     </ul>
