--- a/02-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/02-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -13,12 +13,18 @@
     <h3>listado</h3>
     <ul>
       @for (character of characters(); track character.id; let idx=$index) {
-        <li>
-          <span>{{idx+1}} - {{character.name}}</span>
-          <strong [class.text-danger]="character.power> 9000"
-            [class.text-primary]="character.power < 9000"> ({{character.power}})</strong>
-          <!--<strong [ngClass]="powerClasses()"> ({{character.power}})</strong>-->
-        </li>
+        @if (character.power > 500) {
+          <li>
+            <span>{{idx+1}} - {{character.name}}</span>
+            <strong [class.text-danger]="character.power> 9000" [class.text-primary]="character.power < 9000" > ({{character.power}}) </strong>
+            <!-- <strong [ngClass]="powerClasses()"> ({{character.power}})</strong> -->
+          </li>
+        }@else {
+          <li>
+            <strong>Aqui no hay nadie</strong>
+          </li>
+        }
+
       }
     </ul>
   </div>
