--- a/02-bases/src/app/components/shared/navbar/navbar.html
+++ b/02-bases/src/app/components/shared/navbar/navbar.html
@@ -21,5 +21,7 @@
   [routerLinkActive]="'active'" >Hero</a>
   <a [routerLink]="['/dragonball']"
   [routerLinkActive]="'active'" >dragonball</a>
+  <a routerLink="/dragonball-super"
+  routerLinkActive="active" >dragonball Super</a>
   <!--otros-->
 </nav>
