--- a/02-bases/src/app/pages/dragonball/dragonball-page.component.html
+++ b/02-bases/src/app/pages/dragonball/dragonball-page.component.html
@@ -1,12 +1,30 @@
 <h1>Dragonball Page</h1>
 <hr/>
-
+<!-- txtName es una referencia al input-->
 <section class="row">
   <div class="col-12 col-sm-6">
-    <h3>Agregar:</h3>
-    <input type="text" class="form-control" placeholder="Nombre"/>
-    <input type="number" class="form-control mt-2" placeholder="Poder"/>
-    <button class="mt-2 btn btn-primary">Agregar</button>
+    <h3>Agregar: {{name()}}</h3>
+    <input
+    type="text"
+    class="form-control"
+    placeholder="Nombre"
+    [value]="name()"
+    (change)="name.set(txtName.value)"
+    (input)="name.set(txtName.value)"
+    #txtName
+    />
+    <h3> {{power()}}</h3>
+    <input
+    type="number"
+    class="form-control mt-2"
+    placeholder="Poder"
+    [value]="power()"
+    (input)="power.set(+txtPower.value)"
+    #txtPower
+    />
+    <button
+    (click)="addCharacter()"
+    class="mt-2 btn btn-primary">Agregar</button>
   </div>
 
   <div class="col-12 col-sm-6">
