--- a/02-bases/src/app/pages/dragonball-super/dragonball-super-page.component.html
+++ b/02-bases/src/app/pages/dragonball-super/dragonball-super-page.component.html
@@ -4,12 +4,12 @@
 <section class="row">
   <div class="col-12 col-sm-6">
     <character-add
-    (newCharacter)="addCharacter($event)"
+    (newCharacter)="dragonballService.addCharacter($event)"
     />
   </div>
 
   <div class="col-12 col-sm-6">
-    <dragonball-character-list [listName]="'Los más poderosos'" [characters]="characters()" />
+    <dragonball-character-list [listName]="'Los más poderosos'" [characters]="dragonballService.characters()" />
 
   </div>
 </section>
