--- a/03-gifs-app/src/app/gifs/pages/search-page/search-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/search-page/search-page.component.html
@@ -1,1 +1,15 @@
-<h1>works search page</h1>
+<h2 class="text-2xl font-bold mt-5"> Buscar Gifs</h2>
+<h3 class="text-sm text-gray-500">Buscar gif por nombre , descripción o tags</h3>
+
+<section class="flex flex-col gap-4">
+  <input
+  type="text"
+  placeholder="buscar Gifs"
+  class="mt-3 border border-gray-300 rounded-md p-2"
+  (keyup.enter)="onSearch(txtSearch.value)"
+  #txtSearch/>
+</section>
+
+<section class="grid">
+  <gif-list [gifs]="[]"/>
+</section>
