search view results

--- a/03-gifs-app/src/app/gifs/pages/search-page/search-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/search-page/search-page.component.html
@@ -10,6 +10,6 @@
   #txtSearch/>
 </section>
 
-<section class="grid">
-  <gif-list [gifs]="[]"/>
+<section class="py-5">
+  <gif-list [gifs]="gifs()"/>
 </section>
