--- a/03-gifs-app/src/app/gifs/components/side-menu/side-menu-options/side-menu-options.component.html
+++ b/03-gifs-app/src/app/gifs/components/side-menu/side-menu-options/side-menu-options.component.html
@@ -14,6 +14,20 @@
   </a>
   }
 
+  @for (key of gifService.searchHistoryKeys(); track key) {
+    <a
+    [routerLink]="['/dashboard/search']"
+    routerLinkActive="bg-blue-800"
+    class="w-full px-2 inline-flex space-x-2 items-center border-b border-slate-700 py-3 bg-blue-800 hover:bg-white/5 transition ease-linear duration-150">
+    <div>
+      <!-- <i [class]="key.icon"></i> -->
+       <i class="fa-solid fa-clock-rotate-left"></i>
+    </div>
+    <div class="flex flex-col">
+      <span class="text-lg font-bold leading-5 text-white">{{key}}</span>
+    </div>
+  </a>
+  }
 
 
 </div>
