--- a/03-gifs-app/src/app/gifs/pages/gif-history/gif-history.component.html
+++ b/03-gifs-app/src/app/gifs/pages/gif-history/gif-history.component.html
@@ -1,1 +1,4 @@
-<gif-list [gifs]="[]"/>
+<h3 class="text-2xl font-bold mt-4"> Mostrando : {{query()}}</h3>
+<section class="py-5">
+  <gif-list [gifs]="gifsByKey()"/>
+</section>
