--- a/03-gifs-app/src/app/gifs/pages/trending-page/trending-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/trending-page/trending-page.component.html
@@ -1,4 +1,18 @@
-<section class="py-5">
+<!-- <section class="py-5">
   <gif-list [gifs]="gifService.trendingGifs()" />
-</section>
+</section> -->
+
+
+<div class="grid grid-cols-2 md:grid-cols-4 gap-4 pt-5">
+
+  @for (group of gifService.trendingGifGroup(); track $index) {
+    <div class="grid gap-4">
+        @for (gif of group; track gif.id) {
+          <div>
+            <img class="h-auto max-w-full rounded-lg object-cover" [src]="gif.url" [alt]="gif.title">
+        </div>
+        }
+    </div>
+  }
+</div>
 
