--- a/03-gifs-app/src/app/gifs/pages/trending-page/trending-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/trending-page/trending-page.component.html
@@ -3,7 +3,7 @@
 </section> -->
 
 
-<div class="h-screen bg-red-500 overflow-y-scroll grid grid-cols-2 md:grid-cols-4 gap-4 pt-5"
+<div class="h-screen overflow-y-scroll grid grid-cols-2 md:grid-cols-4 gap-4 pt-5"
 (scroll)="onScroll($event)" #groupDiv>
 
   @for (group of gifService.trendingGifGroup(); track $index) {
