--- a/04-country-app/src/app/shared/pages/home-page/home-page.component.html
+++ b/04-country-app/src/app/shared/pages/home-page/home-page.component.html
@@ -1,1 +1,17 @@
-<h1>home page </h1>
+<div
+  class="hero min-h-screen"
+  style="background-image: url(https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.webp);"
+>
+  <div class="hero-overlay"></div>
+  <div class="hero-content text-neutral-content text-center">
+    <div class="max-w-md">
+      <h1 class="mb-5 text-5xl font-bold">Aplicación de paises</h1>
+      <p class="mb-5">
+Aplicación de entrenamiento en angular
+      </p>
+      <button routerLink="/country"
+      class="btn btn-primary">Empezar</button>
+    </div>
+  </div>
+</div>
+
