--- a/04-country-app/src/app/country/layouts/country-layout/country-layout.component.html
+++ b/04-country-app/src/app/country/layouts/country-layout/country-layout.component.html
@@ -1,6 +1,4 @@
-<h1>Country layout</h1>
-<section class="bg-blue-500">
+<country-top-menu/>
+<section class="px-4">
 <router-outlet/>
 </section>
-
-<h3> Footer del countryLayout</h3>
