--- a/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,1 +1,3 @@
-<h1>by capital page worksaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h1>
+
+<search-input placeholder="Buscar por capital de mi país"/>
+<country-list/>
