--- a/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,3 +1,5 @@
 
-<search-input placeholder="Buscar por capital de mi país"/>
-<country-list/>
+<search-input
+placeholder="Buscar por capital de mi país"
+(value)="onSearch($event)"/>
+<country-list [countries]="countries()"/>
