--- a/04-country-app/src/app/country/components/country-list/country-list.component.html
+++ b/04-country-app/src/app/country/components/country-list/country-list.component.html
@@ -19,7 +19,7 @@
           <td><img [src]="country.flagSvg" [alt]="country.name"></td>
           <td>{{country.name}}</td>
           <td>{{country.capital}}</td>
-          <td>{{country.population}}</td>
+          <td><span class="badge badge-secondary">{{ country.population | number}}</span></td>
           <td>
             <a class="link-primary cursor-pointer">más información</a>
           </td>
