--- a/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -2,4 +2,9 @@
 <search-input
 placeholder="Buscar por capital de mi país"
 (value)="onSearch($event)"/>
-<country-list [countries]="countries()"/>
+@if (isError()) {
+  <h3>{{isError()}}</h3>
+}@else {
+  <country-list [countries]="countries()"/>
+
+}
