--- a/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,10 +1,10 @@
 
 <search-input
 placeholder="Buscar por capital de mi país"
-(value)="onSearch($event)"/>
-@if (isError()) {
-  <h3>{{isError()}}</h3>
-}@else {
-  <country-list [countries]="countries()"/>
+(value)="query.set($event)"/>
+@if (countryResource.error()) {
+  <h3>{{countryResource.error()}}</h3>
+}@if (countryResource.hasValue()){
+  <country-list [countries]="countryResource.value()!"/>
 
 }
