--- a/04-country-app/src/app/country/pages/by-country-page/by-country-page.component.html
+++ b/04-country-app/src/app/country/pages/by-country-page/by-country-page.component.html
@@ -1,3 +1,8 @@
 
-<search-input placeholder="Buscar por país"/>
-<country-list [countries]="countries()"/>
+<search-input placeholder="Buscar por país"(value)="query.set($event)"/>
+@if (countryResource.error()) {
+  <h3>{{countryResource.error()}}</h3>
+}@if (countryResource.hasValue()){
+  <country-list [countries]="countryResource.value()!"/>
+
+}
