--- a/04-country-app/src/app/country/components/country-list/country-list.component.html
+++ b/04-country-app/src/app/country/components/country-list/country-list.component.html
@@ -21,7 +21,9 @@
           <td>{{country.capital}}</td>
           <td><span class="badge badge-secondary">{{ country.population | number}}</span></td>
           <td>
-            <a class="link-primary cursor-pointer">más información</a>
+            <a
+            [routerLink]="['/country/by',country.cca2]"
+            class="link-primary cursor-pointer">más información</a>
           </td>
         </tr>
 
