isLoading, error, results

--- a/04-country-app/src/app/country/components/country-list/country-list.component.html
+++ b/04-country-app/src/app/country/components/country-list/country-list.component.html
@@ -26,7 +26,22 @@
             class="link-primary cursor-pointer">más información</a>
           </td>
         </tr>
+      }
+      @if (errorMessage()) {
+        <tr>
+          <td colspan="8" class="text-center">{{errorMessage()}}</td>
+        </tr>
+      }
+      @if (countries().length===0 && !isLoading()) {
+        <tr>
+          <td colspan="8" class="text-center">No se encontraron resultados</td>
+        </tr>
+      }
 
+      @if (isLoading()) {
+        <tr>
+          <td colspan="8" class="text-center">Buscando paises</td>
+        </tr>
       }
     </tbody>
   </table>
