--- a/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -2,9 +2,10 @@
 <search-input
 placeholder="Buscar por capital de mi país"
 (value)="query.set($event)"/>
-@if (countryResource.error()) {
-  <h3>{{countryResource.error()}}</h3>
-}@if (countryResource.hasValue()){
-  <country-list [countries]="countryResource.value()!"/>
+<country-list
+[countries]="countryResource.value() ?? []"
+[errorMessage]="countryResource.error()"
+[isEmpty]="countryResource.value()?.length ===0"
+[isLoading]="countryResource.isLoading()"
+/>
 
-}
