--- a/04-country-app/src/app/country/components/search-input/search-input.component.html
+++ b/04-country-app/src/app/country/components/search-input/search-input.component.html
@@ -5,6 +5,7 @@
   [placeholder]="placeholder()"
   #txtSearch
   (keyup.enter)="value.emit(txtSearch.value)"
+  (keyup)="inputValue.set(txtSearch.value)"
   autofocus/>
 
   <button class="btn btn-primary" (click)="value.emit(txtSearch.value)">Buscar</button>
