--- a/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/04-country-app/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,7 +1,8 @@
 
 <search-input
 placeholder="Buscar por capital de mi país"
-(value)="query.set($event)"/>
+(value)="query.set($event)"
+[debounceTime]="300" />
 <country-list
 [countries]="countryResource.value() ?? []"
 [errorMessage]="countryResource.error()"
