--- a/04-country-app/src/app/country/pages/by-region-page/by-region-page.component.html
+++ b/04-country-app/src/app/country/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,21 @@
-<country-list [countries]="countries()"/>
+<h1 class="text-2xl">Por región</h1>
+<h3 class="text-lg">Seleccione una región</h3>
+<div class="row mt-2">
+  <div class="flex-col">
+    @for (region of regions; track region) {
+      <button class="btn btn-outline mr-2 w-[100px]"
+      (click)="selectedRegion.set(region)"
+      [class.btn-primary]="selectedRegion()===region">
+        {{region}}
+      </button>
+    }
+  </div>
+
+</div>
+<country-list
+[countries]="countryResource.value() ?? []"
+[errorMessage]="countryResource.error()"
+[isEmpty]="countryResource.value()?.length ===0"
+[isLoading]="countryResource.isLoading()"
+/>
+
