se agrega query de búsqueda en la url. Uso de ActivatedRoute y LinkedSignal

--- a/04-country-app/src/app/country/components/search-input/search-input.component.html
+++ b/04-country-app/src/app/country/components/search-input/search-input.component.html
@@ -6,6 +6,7 @@
   #txtSearch
   (keyup.enter)="value.emit(txtSearch.value)"
   (keyup)="inputValue.set(txtSearch.value)"
+  [value]="initialValue()"
   autofocus/>
 
   <button class="btn btn-primary" (click)="value.emit(txtSearch.value)">Buscar</button>
