--- a/04-country-app/src/app/country/pages/by-country-page/by-country-page.component.html
+++ b/04-country-app/src/app/country/pages/by-country-page/by-country-page.component.html
@@ -1,5 +1,7 @@
 
-<search-input placeholder="Buscar por país"(value)="query.set($event)"/>
+<search-input placeholder="Buscar por país"(value)="query.set($event)"
+[debounceTime]="300"
+[initialValue]="query()"/>
 <country-list
 [countries]="countryResource.value() ?? []"
 [errorMessage]="countryResource.error()"
