--- a/05-pipes-app/src/app/pages/basic-page/basic-page.component.html
+++ b/05-pipes-app/src/app/pages/basic-page/basic-page.component.html
@@ -1,1 +1,23 @@
-<h1>basic page works</h1>
+<section class="mx-10">
+  <h1 class="text-2xl font-bold">Pipes básicos</h1>
+  <h3 class="text-xl font-thin">Pipes incluidos en angular</h3>
+</section>
+<div class="stats stats-vertical lg:stats-horizontal shadow w-full">
+  <div class="stat">
+    <div class="stat-title">Lowercase Pipe</div>
+    <div class="stat-value">{{nameUpper() | lowercase }}</div>
+    <div class="stat-desc">{{nameUpper()}}</div>
+  </div>
+
+  <div class="stat">
+    <div class="stat-title">Uppercase pipe</div>
+    <div class="stat-value">{{ nameLower() | uppercase}}</div>
+    <div class="stat-desc">{{ nameLower() }}</div>
+  </div>
+
+  <div class="stat">
+    <div class="stat-title">Titlecase pipe</div>
+    <div class="stat-value">{{fullName() | titlecase }}</div>
+    <div class="stat-desc">{{fullName()}}</div>
+  </div>
+</div>
