--- a/05-pipes-app/src/app/pages/numbers-page/numbers-page.component.html
+++ b/05-pipes-app/src/app/pages/numbers-page/numbers-page.component.html
@@ -1,1 +1,30 @@
-<p>numbers-page.component works!</p>,
+<section class="mx-10">
+  <h1 class="text-2xl font-bold">Pipes básicos</h1>
+  <h3 class="text-xl font-thin">Pipes incluidos en angular</h3>
+</section>
+<div class="stats stats-vertical lg:stats-horizontal shadow w-full">
+  <div class="stat">
+    <div class="stat-title">Number Pipe:'1.2-4'</div>
+    <div class="stat-value">{{totalSells() | number:'1.2-2' }}</div>
+    <div class="stat-desc">{{totalSells()}}</div>
+  </div>
+
+  <div class="stat">
+    <div class="stat-title">Number Pipe:'1.2-2'</div>
+    <div class="stat-value">{{totalSells()+1234 | number:'1.2-2' }}</div>
+    <div class="stat-desc">{{totalSells()}}</div>
+  </div>
+
+  <div class="stat">
+    <div class="stat-title">Currency Pipe:'1.2-2'</div>
+    <div class="stat-value">{{totalSells() | currency:'CAD':'symbol-narrow':"1.2-2" }}</div>
+    <div class="stat-desc">{{totalSells()}}</div>
+  </div>
+
+  <div class="stat">
+    <div class="stat-title">Percent Pipe:'1.2-2'</div>
+    <div class="stat-value">{{percent() | percent:'1.2-2' }}</div>
+    <div class="stat-desc">{{percent()}}</div>
+  </div>
+</div>
+
