--- a/05-pipes-app/src/app/pages/basic-page/basic-page.component.html
+++ b/05-pipes-app/src/app/pages/basic-page/basic-page.component.html
@@ -74,3 +74,19 @@
 </div>
 
 <div class="divider"></div>
+
+<div class="flex flex-roww gap-2">
+  <h1 class="text-2xl font-bold">
+    Locale Actual:
+    <span class="badge badge-secondary">{{ currentLocale() }}</span>
+  </h1>
+ <button (click)="changeLocale('fr')" class="btn btn-primary">
+    Changer en français
+  </button>
+  <button (click)="changeLocale('en')" class="btn btn-primary">
+    Change to English
+  </button>
+  <button (click)="changeLocale('es')" class="btn btn-primary">
+    Cambiar a español
+  </button>
+</div>
