--- a/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,11 @@
-<p>uncommon-page.component works!</p>,
+<section class="mx-5 mb-5">
+  <h1 class="text-2xl font-bold">Pipes no tan comunes</h1>
+  <h3 class="text-xl font-thin">Pipes incluidos en angular</h3>
+</section>
+
+<div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
+<app-card title="i18nSelectPipe">
+  <p> hola mundo desde el padre</p>
+  <button class="btn btn-primary"> click me</button>
+</app-card>
+</div>
