--- a/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -4,8 +4,9 @@
 </section>
 
 <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
-<app-card title="i18nSelectPipe">
-  <p> hola mundo desde el padre</p>
-  <button class="btn btn-primary"> click me</button>
-</app-card>
+  <app-card title="i18nSelectPipe">
+    <p>Saludos {{client().name}}, es un placer {{client().gender | i18nSelect:invitationMap }} a nuestro evento
+    </p>
+    <button (click)="changeClient()" class="btn btn-primary"> click me</button>
+  </app-card>
 </div>
