--- a/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -10,3 +10,11 @@
     <button (click)="changeClient()" class="btn btn-primary"> click me</button>
   </app-card>
 </div>
+
+<div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
+  <app-card title="i18nPluralPipe">
+    <p>Actualmente {{ clients().length | i18nPlural: clientsMap()}}
+    </p>
+    <button (click)="deleteClient()" [disabled]="clients().length===0" class="btn btn-primary"> click me</button>
+  </app-card>
+</div>
