--- a/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -15,6 +15,29 @@
   <app-card title="i18nPluralPipe">
     <p>Actualmente {{ clients().length | i18nPlural: clientsMap()}}
     </p>
-    <button (click)="deleteClient()" [disabled]="clients().length===0" class="btn btn-primary"> click me</button>
+    <button (click)="deleteClient()" [disabled]="clients().length===0" class="btn btn-primary"> Borra cliente</button>
   </app-card>
+</div>
+
+<div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
+  <app-card title="SlicePipe">
+    <b>Original</b>
+    <p class="text-primary">
+     {{clients().join(", ")}}</p>
+
+     <b class="mt-2">Slice:0:2</b>
+     <p class="text-primary"> {{clients() | slice:0:2}}</p>
+
+     <b class="mt-2">Slice:1:2</b>
+     <p class="text-primary"> {{clients() | slice:1:2}}</p>
+
+     <b class="mt-2">Slice:1:3</b>
+     <p class="text-primary"> {{clients() | slice:1:3}}</p>
+
+     <b class="mt-2">Slice:3:4</b>
+     <p class="text-primary"> {{clients() | slice:3:4}}</p>
+
+     <b class="mt-2">Slice:0:-3</b>
+     <p class="text-primary"> {{clients() | slice:0:-3}}</p>
+    </app-card>
 </div>
