--- a/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -9,17 +9,13 @@
     </p>
     <button (click)="changeClient()" class="btn btn-primary"> click me</button>
   </app-card>
-</div>
 
-<div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
   <app-card title="i18nPluralPipe">
     <p>Actualmente {{ clients().length | i18nPlural: clientsMap()}}
     </p>
     <button (click)="deleteClient()" [disabled]="clients().length===0" class="btn btn-primary"> Borra cliente</button>
   </app-card>
-</div>
 
-<div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
   <app-card title="SlicePipe">
     <b>Original</b>
     <p class="text-primary">
@@ -40,4 +36,10 @@
      <b class="mt-2">Slice:0:-3</b>
      <p class="text-primary"> {{clients() | slice:0:-3}}</p>
     </app-card>
+
+  <app-card title="JsonPipe">
+    <pre class="text-primary">{{clients() | json}}</pre>
+    <pre class="text-primary">{{client() | json }}</pre>
+    <p class="text-primary">{{clients().join(", ") | json}}</p>
+  </app-card>
 </div>
