--- a/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -42,4 +42,18 @@
     <pre class="text-primary">{{client() | json }}</pre>
     <p class="text-primary">{{clients().join(", ") | json}}</p>
   </app-card>
+
+  <app-card title="KeyValuePipe">
+    <pre class="text-primary">{{profile | keyvalue | json}}</pre>
+    <ul>
+      @for (item of profile|keyvalue; track $index) {
+        <li>
+          <span class="text-primary">
+            <strong>{{item.key}}</strong>
+            {{item.value}}
+          </span>
+        </li>
+      }
+    </ul>
+  </app-card>
 </div>
