--- a/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
+++ b/05-pipes-app/src/app/pages/uncommon-page/uncommon-page.component.html
@@ -56,4 +56,29 @@
       }
     </ul>
   </app-card>
+
+  <app-card title="AsyncPipe">
+    <p>{{ promiseValue | async }}</p>
+
+    @if( promiseValue | async; as value ) {
+    <p class="text-primary">{{ value }}</p>
+    }
+    <!--  -->
+    @else {
+    <p class="text-accent">Espere por favor...</p>
+    }
+
+    <!--  -->
+    <h3 class="text-2xl">Observable</h3>
+    <p>{{ myObservableTimer | async }}</p>
+
+    @if ( myObservableTimer | async; as value ) {
+    <p>Valor: {{ value }}</p>
+
+    }
+    <!--  -->
+    @else {
+    <p>Esperando primer valor</p>
+    }
+  </app-card>
 </div>
