--- a/05-pipes-app/src/app/pages/custom-page/custom-page.component.html
+++ b/05-pipes-app/src/app/pages/custom-page/custom-page.component.html
@@ -1,1 +1,16 @@
-<p>custom-page.component works!</p>,
+<section class="mx-5">
+  <h1 class="text-2xl font-bold">Pipes personalizados</h1>
+  <h3 class="text-xl font-thin">Pipes no incluidos en Angular</h3>
+</section>
+
+<div class="stats shadow">
+  <div class="stat">
+    <div class="stat-title">ToggleCase Pipe</div>
+    <div class="stat-value">{{ name() | toggleCase : upperCase() }}</div>
+    <div class="stat-desc">{{ name() }}</div>
+
+    <button (click)="upperCase.set(!upperCase())" class="btn btn-primary mt-2">
+      ToggleCase
+    </button>
+  </div>
+</div>
