--- a/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -92,5 +92,10 @@
 
         <span>Producto</span>
         <pre>{{ myForm.controls.name.value | json }}</pre>
+
+        <span>Errores</span>
+        <pre>{{ myForm.controls.name.errors | json }}</pre>
+        <pre>{{ myForm.controls['price'].errors | json }}</pre>
+        <pre>{{ myForm.controls['inStorage'].errors | json }}</pre>
     </div>
 </div>
