--- a/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -15,11 +15,12 @@
                            class="form-control"
                            placeholder="Nombre del producto"
                            formControlName="name">
-
-                    <span class="form-text text-danger">
+                    @if (isValidField('name')) {
+                     <span class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
-                        error message
+                        {{getFieldError('name')}}
                     </span>
+                    }
                 </div>
             </div>
 
@@ -94,7 +95,7 @@
         <pre>{{ myForm.controls.name.value | json }}</pre>
 
         <span>Errores</span>
-        <pre>{{ myForm.controls.name.errors | json }}</pre>
+        <pre>{{ myForm.controls['name'].errors | json }}</pre>
         <pre>{{ myForm.controls['price'].errors | json }}</pre>
         <pre>{{ myForm.controls['inStorage'].errors | json }}</pre>
     </div>
