mejorar de reutilización  de errores

--- a/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
 
-        <form autocomplete="off" [formGroup]="myForm">
+        <form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSave()">
 
             <!-- Campo de producto -->
             <div class="mb-3 row">
@@ -32,9 +32,12 @@
                            class="form-control"
                            placeholder="Precio del producto"
                            formControlName="price">
-                    <span class="form-text text-danger">
-                        El precio debe de ser 0 o mayor
+                    @if (isValidField('price')) {
+                     <span class="form-text text-danger">
+                        <!-- Debe de ser de 3 letras -->
+                        {{getFieldError('price')}}
                     </span>
+                    }
                 </div>
             </div>
 
@@ -47,9 +50,12 @@
                            placeholder="Existencias del producto"
                            formControlName="inStorage">
 
-                    <span class="form-text text-danger">
-                         Las existencias deben de ser 0 o mayor
+                    @if (isValidField('inStorage')) {
+                     <span class="form-text text-danger">
+                        <!-- Debe de ser de 3 letras -->
+                        {{getFieldError('inStorage')}}
                     </span>
+                    }
                 </div>
             </div>
 
