--- a/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -15,10 +15,10 @@
                            class="form-control"
                            placeholder="Nombre del producto"
                            formControlName="name">
-                    @if (isValidField('name')) {
+                    @if (formUtils.isValidField(myForm,'name')) {
                      <span class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
-                        {{getFieldError('name')}}
+                        {{formUtils.getFieldError(myForm,'name')}}
                     </span>
                     }
                 </div>
@@ -32,10 +32,10 @@
                            class="form-control"
                            placeholder="Precio del producto"
                            formControlName="price">
-                    @if (isValidField('price')) {
+                    @if (formUtils.isValidField(myForm,'price')) {
                      <span class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
-                        {{getFieldError('price')}}
+                        {{formUtils.getFieldError(myForm,'price')}}
                     </span>
                     }
                 </div>
@@ -50,10 +50,10 @@
                            placeholder="Existencias del producto"
                            formControlName="inStorage">
 
-                    @if (isValidField('inStorage')) {
+                    @if (formUtils.isValidField(myForm,'inStorage')) {
                      <span class="form-text text-danger">
                         <!-- Debe de ser de 3 letras -->
-                        {{getFieldError('inStorage')}}
+                        {{formUtils.getFieldError(myForm,'inStorage')}}
                     </span>
                     }
                 </div>
