mostrar errores en pantalla de un formArray

--- a/06-reactive-forms-app/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -8,10 +8,12 @@
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
             <input class="form-control"
-                   placeholder="Nombre de la persona" formControlName="name">
-            <span class="form-text text-danger">
-                   error message
+                   placeholder="Nombre de la persona" formControlName="name"/>
+              @if (formUtils.isValidField(myForm,'name')){
+              <span class="form-text text-danger">
+                   {{formUtils.getFieldError(myForm,'name')}}
             </span>
+            }
         </div>
     </div>
 
@@ -48,9 +50,11 @@
                       Eliminar
                   </button>
                 </div>
-                <span class="form-text text-danger">
-                   Este campo es requerido
-                </span>
+               @if (formUtils.isValidFieldInArray(favoriteGames,i)){
+              <span class="form-text text-danger">
+                   {{formUtils.getFieldErrorInArray(favoriteGames,i)}}
+            </span>
+            }
             </div>
             }
 
