agregar y eliminar controles de formularios

--- a/06-reactive-forms-app/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -1,7 +1,7 @@
 <h2>Reactivos: <small> Dinámicos </small></h2>
 <hr>
 
-<form autocomplete="off" [formGroup]="myForm">
+<form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSubmit()">
 
     <!-- Nombre -->
     <div class="mb-3 row">
@@ -24,7 +24,9 @@
 
             <div class="input-group">
                 <input class="form-control"
-                       placeholder="Agregar favorito">
+                       placeholder="Agregar favorito"
+                       [formControl]="newFavorite"
+                       (keydown.enter)="onAddToFavorites()">
 
 
                 <button class="btn btn-outline-primary"
@@ -41,12 +43,12 @@
         <label class="col-sm-3 col-form-label">Favoritos</label>
         <div class="col-sm-9" formArrayName="favoriteGames">
 
-            @for (favoriteGame of favoriteGames.controls; track $index; let i=$index) {
+            @for (favoriteGame of favoriteGames.controls; track favoriteGame; let i=$index) {
               <div class="mb-1">
                 <div class="input-group">
                     <input class="form-control" [formControlName]="i">
                     <button class="btn btn-outline-danger"
-                            type="button">
+                            type="button" (click)="onDeleteFavorite(i)">
                       Eliminar
                   </button>
                 </div>
@@ -58,7 +60,11 @@
             </div>
             }
 
-
+             @if (formUtils.isValidField(myForm,'favoriteGames')){
+              <span class="form-text text-danger">
+                   Debe de tener al menos 2 juegos
+            </span>
+            }
         </div>
     </div>
 
@@ -68,6 +74,7 @@
         <div class="col-sm-12">
             <button type="submit"
                     class="btn btn-primary float-end"
+                    [disabled]="myForm.invalid"
                     >
                     <!-- [disabled]="myForm.invalid" -->
                 Guardar
@@ -89,5 +96,5 @@
 <br>
 
 <span>Agregar Juego</span>
-<!-- <pre>{{ myForm.valid | json }}</pre>
-<pre>{{ myForm.valid | json }}</pre> -->
+<pre>{{ myForm.controls['favoriteGames'].errors | json }}</pre>
+<pre>{{ myForm.controls['favoriteGames'].value | json }}</pre>
