--- a/06-reactive-forms-app/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -26,11 +26,12 @@
                 <input class="form-control"
                        placeholder="Agregar favorito"
                        [formControl]="newFavorite"
-                       (keydown.enter)="onAddToFavorites()">
+                       (keydown.enter)="onAddToFavorites()"
+                       (keydown.enter)="$event.preventDefault()">
 
 
                 <button class="btn btn-outline-primary"
-                        type="button">
+                        type="button" (click)="onAddToFavorites()">
                     Agregar favorito
                 </button>
             </div>
