--- a/06-reactive-forms-app/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/06-reactive-forms-app/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSubmit()">
 
     <!-- Radio -->
     <div class="row mb-3">
@@ -13,7 +13,8 @@
                 <input class="form-check-input"
                        type="radio"
                        value="M"
-                       id="radioMasculino">
+                       id="radioMasculino"
+                       formControlName="gender">
                 <label class="form-check-label" for="radioMasculino">
                   Masculino
                 </label>
@@ -23,7 +24,8 @@
                 <input class="form-check-input"
                        type="radio"
                        value="F"
-                       id="radioFemenino">
+                       id="radioFemenino"
+                       formControlName="gender">
                 <label class="form-check-label" for="radioFemenino">
                   Femenino
                 </label>
@@ -40,7 +42,8 @@
             <div class="form-check form-switch mt-2">
                 <input class="form-check-input"
                        type="checkbox"
-                       id="flexSwitchCheckChecked">
+                       id="flexSwitchCheckChecked"
+                       formControlName="wantNotifications">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
 
@@ -51,17 +54,22 @@
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
-            <div class="form-check">
+            <div class="form-check"
+            [class.text-danger]="formUtils.isValidField(myForm,'termAndConditions')">
                 <input class="form-check-input"
                        type="checkbox"
-                       id="flexCheckDefault">
+                       id="flexCheckDefault"
+                       formControlName="termAndConditions">
                 <label class="form-check-label" for="flexCheckDefault">
                   Términos y condiciones de uso
                 </label>
               </div>
-              <span class="form-text text-danger">
+              @if (formUtils.isValidField(myForm,'termAndConditions')) {
+                <span class="form-text text-danger">
                  Debe de aceptar las condiciones de uso
               </span>
+              }
+
 
         </div>
     </div>
@@ -81,15 +89,15 @@
 
 
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br>
 
 <h5>Persona</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.controls['gender'].value | json }}</pre>
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
