--- a/06-reactive-forms-app/src/app/auth/pages/register-page/register-page.component.html
+++ b/06-reactive-forms-app/src/app/auth/pages/register-page/register-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
 
-        <form autocomplete="off">
+        <form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSubmit()">
 
             <!-- Nombre -->
             <div class="row mb-3">
@@ -12,11 +12,14 @@
                 <div class="col-sm-9">
                     <input type="text"
                            class="form-control"
-                           placeholder="Nombre del usuario">
-
-                    <span class="form-text text-danger">
-                        Debe de ser en formato de nombre y apellido
+                           placeholder="Nombre del usuario"
+                           formControlName="name">
+                    @if (formUtils.isValidField(myForm, 'name')) {
+                      <span class="form-text text-danger">
+                        {{formUtils.getFieldError(myForm, 'name')}}
                     </span>
+                    }
+
                 </div>
             </div>
 
@@ -26,10 +29,13 @@
                 <div class="col-sm-9">
                     <input type="email"
                            class="form-control"
-                           placeholder="Email del usuario">
-                    <span class="form-text text-danger">
-                        mensaje de error del email
+                           placeholder="Email del usuario"
+                           formControlName="email">
+                    @if (formUtils.isValidField(myForm, 'email')) {
+                      <span class="form-text text-danger">
+                        {{formUtils.getFieldError(myForm, 'email')}}
                     </span>
+                    }
                 </div>
             </div>
 
@@ -39,10 +45,13 @@
                 <div class="col-sm-9">
                     <input type="text"
                            class="form-control"
-                           placeholder="Nombre código del usuario">
-                    <span class="form-text text-danger">
-                         El username no puede ser Strider
+                           placeholder="Nombre código del usuario"
+                           formControlName="username">
+                    @if (formUtils.isValidField(myForm, 'username')) {
+                      <span class="form-text text-danger">
+                        {{formUtils.getFieldError(myForm, 'username')}}
                     </span>
+                    }
                 </div>
             </div>
 
@@ -52,11 +61,14 @@
                 <div class="col-sm-9">
                     <input type="password"
                            class="form-control"
-                           placeholder="Password de su cuenta">
+                           placeholder="Password de su cuenta"
+                           formControlName="password">
 
-                    <span class="form-text text-danger">
-                         La contraseña debe de ser mayor de 6 caracteres.
+                    @if (formUtils.isValidField(myForm, 'password')) {
+                      <span class="form-text text-danger">
+                        {{formUtils.getFieldError(myForm, 'password')}}
                     </span>
+                    }
                 </div>
             </div>
 
@@ -66,11 +78,14 @@
                 <div class="col-sm-9">
                     <input type="password"
                            class="form-control"
-                           placeholder="Confirmar la contraseña">
+                           placeholder="Confirmar la contraseña"
+                           formControlName="password2">
 
-                    <span class="form-text text-danger">
-                         Las contraseñas deben de ser iguales
+                    @if (formUtils.isValidField(myForm, 'password2')) {
+                      <span class="form-text text-danger">
+                        {{formUtils.getFieldError(myForm, 'password2')}}
                     </span>
+                    }
                 </div>
             </div>
 
@@ -90,24 +105,24 @@
 </div>
 
 
-<h2>Form Valid: </h2>
-<h2>Form Status: </h2>
-<h2>Form Pending: </h2>
+<h2>Form Valid: {{myForm.valid}}</h2>
+<h2>Form Status: {{myForm.status}}</h2>
+<h2>Form Pending: {{myForm.pending}} </h2>
 <h2>Form errors</h2>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.errors | json }}</pre>
+<h2>Value </h2>
+<h5>{{ myForm.value | json}}</h5>
+<pre>{{ myForm.controls['name'].errors | json }}</pre>
 
 <h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['email'].errors | json }}</pre>
 
 <h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['username'].errors| json }}</pre>
 
 
 <h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['password'].errors | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['password2'].errors | json }}</pre>
