--- a/06-reactive-forms-app/src/app/auth/pages/register-page/register-page.component.html
+++ b/06-reactive-forms-app/src/app/auth/pages/register-page/register-page.component.html
@@ -93,6 +93,9 @@
 
             <div class="row">
                 <div class="col">
+                  @if (myForm.errors && myForm.touched) {
+                    <span class="text-danger">Las contraseñas no son iguales</span>
+                  }
                     <button class="btn btn-primary float-end"
                             type="submit">
                         Crear
