--- a/06-reactive-forms-app/src/app/country/pages/country-page/country-page.component.html
+++ b/06-reactive-forms-app/src/app/country/pages/country-page/country-page.component.html
@@ -1,17 +1,19 @@
 <h1 class="mt-3">Selectores anidados</h1>
 <hr />
 
-<form>
+<form [formGroup]="myForm">
   <!-- Region -->
   <div class="row mb-3">
     <div class="col">
       <label class="form-label">Continente:</label>
       <select formControlName="region" class="form-control">
         <option value="">-- Seleccione Continente --</option>
-
-        <!-- <option [value]="region">
+        @for (region of regions(); track region) {
+                  <option [value]="region">
           {{ region }}
-        </option> -->
+        </option>
+
+        }
 
       </select>
     </div>
