--- a/06-reactive-forms-app/src/app/country/pages/country-page/country-page.component.html
+++ b/06-reactive-forms-app/src/app/country/pages/country-page/country-page.component.html
@@ -46,10 +46,12 @@
       <select formControlName="border" class="form-control">
         <option value="">-- Seleccione la frontera --</option>
 
+        @for (country of borders(); track country.cca3) {
+           <option [value]="country.cca3">
+          {{ country.name.common }}
+        </option>
+        }
 
-        <!-- <option [value]="country.cca3">
-          {{ country.name }}
-        </option> -->
       </select>
     </div>
   </div>
