fuentes personalizadas, navbar

--- a/09-teslo-shop/src/styles.css
+++ b/09-teslo-shop/src/styles.css
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+@font-face {
+  font-family: Montserrat;
+  src: url("/assets/fonts/Montserrat/MontserratAlternates-Medium.ttf") format("truetype");
+}
+@theme {
+  --font-montserrat: "Montserrat", sans-serif;
+}
 @plugin "daisyui" {
   themes: night --default;
 }
