--- a/09-teslo-shop/src/styles.css
+++ b/09-teslo-shop/src/styles.css
@@ -6,6 +6,16 @@
 }
 @theme {
   --font-montserrat: "Montserrat", sans-serif;
+  --animate-fadeIn: fadeIn 0.3s ease-in-out;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
 @plugin "daisyui" {
   themes: night --default;
