--- a/09-teslo-shop/src/app/store-front/pages/home-page/home-page.component.html
+++ b/09-teslo-shop/src/app/store-front/pages/home-page/home-page.component.html
@@ -3,15 +3,10 @@
 <div
   class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-2 gap-3"
 >
-<product-card/>
-<product-card/>
-<product-card/>
-<product-card/>
-<product-card/>
-<product-card/>
-<product-card/>
-<product-card/>
-<product-card/>
-
+ @for (product of productsResource.value()?.products; track product.id) {
+  <product-card [product]="product"/>
+ }@empty {
+  <p>no hay productos</p>
+ }
 </div>
 
