--- a/09-teslo-shop/src/app/store-front/pages/product-page/product-page.component.html
+++ b/09-teslo-shop/src/app/store-front/pages/product-page/product-page.component.html
@@ -1,1 +1,26 @@
-<p>product-page.component works!</p>,
+@if( productResource.isLoading() ) {
+<div class="flex justify-center items-center h-screen">
+  <span class="loading loading-spinner loading-lg"></span>
+</div>
+}
+
+<!-- Producto -->
+@if( productResource.hasValue() ) {
+
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+  <!-- Imágenes -->
+
+  <!--  -->
+  <div>
+    <h2 class="text-2xl font-bold font-montserrat">
+      {{ productResource.value()!.title }}
+    </h2>
+    <div class="divider"></div>
+
+    <p>
+      {{ productResource.value()!.description }}
+    </p>
+  </div>
+</div>
+
+}
