--- a/09-teslo-shop/src/app/store-front/pages/product-page/product-page.component.html
+++ b/09-teslo-shop/src/app/store-front/pages/product-page/product-page.component.html
@@ -9,6 +9,7 @@
 
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
   <!-- Imágenes -->
+  <product-carousel [images]="productResource.value()?.images ?? []" />
 
   <!--  -->
   <div>
