servicio de paginación con url y desacoplado

--- a/09-teslo-shop/src/app/store-front/pages/gender-page/gender-page.component.html
+++ b/09-teslo-shop/src/app/store-front/pages/gender-page/gender-page.component.html
@@ -11,4 +11,5 @@
   <p>no hay productos</p>
  }
 </div>
+<app-pagination [pages]="productsResource.value()?.pages ?? 0" [currentPage]="paginationService.currentPage()"/>
 
