--- a/09-teslo-shop/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
+++ b/09-teslo-shop/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
@@ -1,1 +1,11 @@
-<p>product-admin-page.component works!</p>,
+@if (productResource.isLoading()) {
+<div class="flex justify-center items-center h-screen">
+  <span class="loading loading-spinner loading-lg"></span>
+</div>
+}
+<!--  -->
+
+@if( productResource.hasValue() ) {
+<!-- Producto -->
+<h3>{{productResource.value().title}}</h3>
+}
