fix import path, updateProduct, product details form

--- a/09-teslo-shop/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
+++ b/09-teslo-shop/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
@@ -7,5 +7,5 @@
 
 @if( productResource.hasValue() ) {
 <!-- Producto -->
-<h3>{{productResource.value().title}}</h3>
+<product-details [product]="productResource.value()!" />
 }
