--- a/09-teslo-shop/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/09-teslo-shop/src/app/products/components/product-carousel/product-carousel.component.html
@@ -12,6 +12,14 @@
         class="w-full object-cover"
       />
     </div>
+    } @empty {
+      <div class="swiper-slide">
+      <img
+        [src]="null | productImage"
+        alt="Producto"
+        class="w-full object-cover"
+      />
+    </div>
     }
   </div>
   <!-- If we need pagination -->
