--- a/09-teslo-shop/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
+++ b/09-teslo-shop/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
@@ -142,9 +142,16 @@
       </button>
     </div>
 
-    <product-carousel [images]="product().images" />
+    <product-carousel [images]="imagesToCarousel()" />
 
-    <input type="file" class="file-input file-input-bordered w-full mt-4" />
+    <input type="file" multiple="true" accept="image/*" class="file-input file-input-bordered w-full mt-4"
+    (change)="onFileChanged($event)"/>
+  </div>
+  <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-2">
+    @for (image of tempImages(); track image) {
+      <img [src]="image" alt="temporal image" class="w-full object-cover rounded-xl"/>
+    }
+
   </div>
 </form>
 
